# gamma

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  gamma  install.sh
benchmark/: CMakeLists.txt  benchmark_array.h  run.cpp
cmake/modules/: PrecompiledHeader.cmake
include/gamma/: action_state.hpp  array.h  buffer.h  cache.h  canvas.hpp  commands.h  console.h  cursor.h  font.h  fwd.h  fwd_decl.h  gamma_factory.hpp  gamma_obj.hpp  gap_buffer.h  globals.h  globals.hpp  init.h  input.h  input_handler.h  interp.h  interpreter.h  iwindow.hpp  j.h  load_surf.h  main.cpp  manager.hpp  pch.h  pch.hpp  renderer.hpp  scroll_bar.h  sdl_factory.hpp  sdl_impl.hpp  timer.h  update.h  utility.h  view.h  widget.hpp  window.hpp  window_impl.hpp
lib/include/SDL2/: SDL_config.h
lib/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
lib/lib/cmake/SDL2/: sdl2-config.cmake
lib/lib/pkgconfig/: sdl2.pc
src/: CMakeLists.txt  Makefile  action_state.cpp  array.h  buffer.cpp  buffer.h  cache.cpp  canvas.cpp  commands.cpp  console.cpp  console.h  cursor.cpp  font.cpp  font.h  fwd.h  gap_buffer.h  globals.h  hotloader.cpp  hotloader.h  init.cpp  init.h  input.cpp  input.h  input_handler.cpp  interp.cpp  interp.h  interpreter.cpp  load_surf.cpp  main  main.cpp  manager.cpp  my_first.lua  our_string.h  pch.cpp  pch.h  renderer.cpp  scroll_bar.cpp  sdl_impl.cpp  syntax.m  timer.cpp  (+6 more)
test/: CMakeLists.txt  global_test.cpp  run.cpp  test_array.h  test_gap_buffer.h  test_view.h  text.txt
test/ExitWindow/: deps.hpp  exit_mock_manager.hpp  exit_mock_sdl_impl.hpp  test.cpp
test/MainWindow/: deps.hpp  main_mock_manager.hpp  main_mock_sdl.hpp  test.cpp
test/Manager/: deps.hpp  test.cpp
test/gamma_lib/: test_array.h  test_gap_buffer.h
test/include/tests/: 2  mock_canvas.hpp  mock_fact.hpp  mock_manager.hpp  mock_sdl.hpp  test_pch.hpp  utils.hpp
test/lib/: utility.h
test/src/: test_commands.h  test_cursor.h  test_read_file.h
test/test/: check.h
tests/: CMakeLists.txt  global_test.cpp
tests/include/tests/: mock_fact.hpp
